# cdfr

./: .gitignore  README.md
.github/: codecov.yml
pami/: README.md  platformio.ini
robot/ros_ws/src/herminebot_behaviors/: CMakeLists.txt  README.md  behavior_plugin.xml  navigator_plugins.xml  package.xml
robot/ros_ws/src/herminebot_behaviors/behavior_trees/: omni_preemption.xml  preemption.xml
robot/ros_ws/src/herminebot_behaviors/include/herminebot_behaviors/: bt_navigator.hpp  move_elevator.hpp  navigator_preemption.hpp
robot/ros_ws/src/herminebot_behaviors/include/herminebot_behaviors/action/: move_elevator_action.hpp
robot/ros_ws/src/herminebot_behaviors/include/herminebot_behaviors/behavior/: move_elevator.hpp  omni_drive.hpp
robot/ros_ws/src/herminebot_behaviors/include/herminebot_behaviors/bt_plugin/: bt_utils.hpp  manage_map_service.hpp  move_elevator_action.hpp  omni_drive_action.hpp
robot/ros_ws/src/herminebot_behaviors/include/herminebot_behaviors/navigator/: navigator_preemption.hpp
robot/ros_ws/src/herminebot_behaviors/src/: bt_navigator.cpp  main_bt_navigator.cpp  move_elevator.cpp  move_elevator_action.cpp  navigator_preemption.cpp
robot/ros_ws/src/herminebot_behaviors/src/action/: move_elevator_action.cpp
robot/ros_ws/src/herminebot_behaviors/src/behavior/: move_elevator.cpp  omni_drive.cpp
robot/ros_ws/src/herminebot_behaviors/src/bt_plugin/: manage_map_service.cpp  move_elevator_action.cpp  omni_drive_action.cpp
robot/ros_ws/src/herminebot_behaviors/src/navigator/: navigator_preemption.cpp
robot/ros_ws/src/herminebot_behaviors/test/: CMakeLists.txt  test_action_server.hpp  test_manage_map_service.cpp  test_move_elevator_action.cpp  test_move_elevator_behavior.cpp  test_omni_drive_action.cpp  test_omni_drive_behavior.cpp  test_uncrustify.py
robot/ros_ws/src/herminebot_description/: CMakeLists.txt  README.md  package.xml
robot/ros_ws/src/herminebot_description/config/: ekf.yaml  ekf_omni.yaml  herminebot_omni.yaml
robot/ros_ws/src/herminebot_description/herminebot_description/: __init__.py  omnibot_cmd_converter.py  services_common_server.py
robot/ros_ws/src/herminebot_description/launch/: description.launch.py
robot/ros_ws/src/herminebot_description/models/: gazebo_plugins.xacro  herminebot.urdf  herminebot_core.xacro  herminebot_diff.urdf  herminebot_omni.urdf
robot/ros_ws/src/herminebot_description/test/: CMakeLists.txt  test_flake8.py  test_omnibot_cmd_converter.py  test_services_common_server.py
robot/ros_ws/src/herminebot_gazebo/: CMakeLists.txt  README.md  package.xml
robot/ros_ws/src/herminebot_gazebo/config/: ros_gz_config.erb  ros_gz_config_herminebot_diff.erb  ros_gz_config_herminebot_omni.erb
robot/ros_ws/src/herminebot_gazebo/herminebot_gazebo/: __init__.py  frame_switcher_node.py  laser_to_range_node.py
robot/ros_ws/src/herminebot_gazebo/launch/: spawn_herminebot.launch.py  world.launch.py
robot/ros_ws/src/herminebot_gazebo/models/beacon/: model.config  model.sdf
robot/ros_ws/src/herminebot_gazebo/models/board/: model.config  model.sdf
robot/ros_ws/src/herminebot_gazebo/models/board/meshes/: board.dae
robot/ros_ws/src/herminebot_gazebo/models/column/: model.config  model.sdf
robot/ros_ws/src/herminebot_gazebo/models/herminebot/: herminebot.erb  model.config  model.sdf
robot/ros_ws/src/herminebot_gazebo/models/herminebot/meshes/: elevator.stl
robot/ros_ws/src/herminebot_gazebo/models/herminebot_diff/: herminebot.erb  model.config
robot/ros_ws/src/herminebot_gazebo/models/herminebot_omni/: herminebot.erb  model.config
robot/ros_ws/src/herminebot_gazebo/models/platform/: model.config  model.sdf
robot/ros_ws/src/herminebot_gazebo/test/: CMakeLists.txt  test_flake8.py  test_laser_to_range.py
robot/ros_ws/src/herminebot_gazebo/worlds/: blue.world  full.world  gui.config  the_show_must_go_on.world  world.erb  yellow.world
robot/ros_ws/src/herminebot_navigation/: CMakeLists.txt  README.md  package.xml
robot/ros_ws/src/herminebot_navigation/behavior_tree/: navigate_through_poses_and_recovery.xml  navigate_to_pose_and_recovery.xml
robot/ros_ws/src/herminebot_navigation/include/herminebot_navigation/: costmap_keepout_filter.hpp  costmap_obstacle_layer.hpp  hrc_regulated_rotation_controller.hpp  map_modifier.hpp  regulated_pure_pursuit_controller.hpp  robot_triangulation.hpp
robot/ros_ws/src/herminebot_navigation/launch/: navigation.launch.py
robot/ros_ws/src/herminebot_navigation/launch/nav2/: bringup_launch.py  navigation_launch.py
robot/ros_ws/src/herminebot_navigation/maps/: blue_map.yaml  elements_mask.pgm  elements_mask.yaml  empty_map.yaml  full_map.yaml  yellow_map.yaml
robot/ros_ws/src/herminebot_navigation/params/: nav2_params.yaml  nav2_params_herminebot_diff.yaml  nav2_params_herminebot_omni.erb  nav2_params_herminebot_omni.yaml
robot/ros_ws/src/herminebot_navigation/plugin_description/: costmap_plugins.xml  hrc_regulated_pure_pursuit_controller.xml  hrc_regulated_rotation_controller.xml
robot/ros_ws/src/herminebot_navigation/rviz/: nav2_config.rviz  nav2_config_herminebot_omni.rviz
robot/ros_ws/src/herminebot_navigation/src/: costmap_keepout_filter.cpp  costmap_obstacle_layer.cpp  hrc_regulated_rotation_controller.cpp  main_map_modifier.cpp  main_robot_triangulation.cpp  map_modifier.cpp  regulated_pure_pursuit_controller.cpp  robot_triangulation.cpp
robot/ros_ws/src/herminebot_navigation/test/: CMakeLists.txt  keepout_filter_test.cpp  obstacle_layer_test.cpp  test_RRC.cpp  test_map_modifier.cpp  test_robot_triangulation.cpp  test_rpp.cpp  test_service.hpp
robot/ros_ws/src/herminebot_navigation/test/path_utils/: path_utils.cpp  path_utils.hpp  test_path_utils.cpp
robot/ros_ws/src/hrc_utils/: CMakeLists.txt  README.md  package.xml
robot/ros_ws/src/hrc_utils/hrc_utils/: __init__.py  utils.py
robot/ros_ws/src/hrc_utils/include/hrc_utils/: test_service.hpp  testing_utils.hpp  utils.hpp
robot/ros_ws/src/hrc_utils/src/: utils.cpp
robot/ros_ws/src/hrc_utils/test/: CMakeLists.txt  test_flake8.py  test_services_common_server.py  test_utils.cpp  test_utils.py
(+147 files in other folders)
