<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>herminebot_behaviors</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="77966063+Axel927@users.noreply.github.com">axel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>nav2_behaviors</build_depend>
  <build_depend>hrc_interfaces</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_core</build_depend>
  
  <exec_depend>nav2_bhaviors</exec_depend>
  <exec_depend>hrc_interfaces</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_core</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/behavior_plugin.xml" />
  </export>
</package>
