<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>herminebot_navigation</name>
    <version>0.0.0</version>
    <description>Package for an autonomous navigation of the herminebot</description>
    <maintainer email="axelt.hrc@gmail.com">axel</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>nav2_regulated_pure_pursuit_controller</depend>
    <depend>pluginlib</depend>

    <depend>nav2_util</depend>
    <depend>rclcpp</depend>
    <depend>hrc_interfaces</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rclcpp_components</depend>
    <depend>nav2_costmap_2d</depend>

    <exec_depend>robot_localization</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>nav2_bringup</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/plugin_description/hrc_regulated_pure_pursuit_controller.xml" />
        <costmap_2d plugin="${prefix}/plugin_description/costmap_plugins.xml"/>
    </export>
</package>
